Bug 156751 - Pop-up menu in Find/Replace text boxes lists "Insert Emoji" instead of "Special Character"
Summary: Pop-up menu in Find/Replace text boxes lists "Insert Emoji" instead of "Speci...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2023-08-12 19:26 UTC by [REDACTED]
Modified: 2023-08-16 18:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows faulty element in user interface (54.03 KB, image/png)
2023-08-12 19:26 UTC, [REDACTED]
Details

Note You need to log in before you can comment on or make changes to this bug.
Description [REDACTED] 2023-08-12 19:26:36 UTC
Created attachment 188946 [details]
Shows faulty element in user interface

See this discussion: https://ask.libreoffice.org/t/search-and-replace-with-special-characters/94513/10, post by Mike Kaganski for background.

Problem: When using the Find/Replace command, you may want to enter a special character in the Find or Replace box. This used to be possible by right-clicking in the text box, then select "Special Character ...". But in 
Version: 7.2.5.2 / LibreOffice Community, Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5, CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3, Locale: nl-NL (nl_NL.UTF-8); UI: nl-NL, Calc: threaded

and Version: 7.5.5.2 (X86_64) / LibreOffice Community, Build ID: bf0ddd27f701ac1d9e0942bffe145c51e201aa5c, CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3, Locale: nl-NL (nl_NL.UTF-8); UI: en-US, Calc: threaded

on Ubuntu Linux it has an Insert emoji option instead. 

Comment by Mike Kaganski: then gtk3 vcl plugin needs a bug report … and a fix
Comment 1 V Stuart Foote 2023-08-14 11:46:15 UTC
Can not confirm on Windows build of recent master against 24.2

The string is "Special Character..." as laid down in .UI source in 2017 at https://opengrok.libreoffice.org/xref/core/vcl/uiconfig/ui/editmenu.ui?r=3b3c181e&mo=2939&fi=72#72

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b0b4ddc8bd8fdd4cd689300620fe4621d7533b7
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 raal 2023-08-15 22:09:54 UTC
it's OK in Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4403b4e6bac19d89afded080d80de049aaa294ca
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

repro in Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4403b4e6bac19d89afded080d80de049aaa294ca
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2023-08-15 22:22:37 UTC
This seems to have begun at the below commit in bibisect repository/OS bibisect-linux-64-6.3$.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 dc4d983b636de530f77708ce4d16a1977ebb081d is the first bad commit
commit dc4d983b636de530f77708ce4d16a1977ebb081d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Mar 24 18:38:27 2019 +0100

    source f920e86fbf3968104e1dfc0e9934e80652ed0837

69569: weld SvxSearchDialog | https://gerrit.libreoffice.org/c/core/+/69569
Comment 4 Caolán McNamara 2023-08-16 08:17:52 UTC
It is a genuine gtk GtkEntry and has the same native GtkEntry menus that all GtkEntry widgets do. The LibreOffice internal "insert, special characters" is currently available from ctrl+shift+s pressed with a GtkEntry.

I don't really consider it a bug, but on the other hand https://docs.gtk.org/gtk3/signal.Entry.populate-popup.html exists so it might be possible to implement.
Comment 5 Commit Notification 2023-08-16 16:12:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/930cb8440697d80df0a399d765dc85966732ddce

Resolves: tdf#156751 add "Special Character..." to GtkEntry context menus

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 [REDACTED] 2023-08-16 18:49:34 UTC
That was fast! Thank you.